deploy/k8s/mesh/10-policy-player.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: player-grpc-hub-only
  namespace: shardlands
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: player-grpc
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: hub-identity
