deploy/k8s/mesh/11-policy-arena.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: arena-grpc-hub-only
  namespace: shardlands
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: arena-grpc
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: hub-identity
