deploy/k8s/mesh/12-policy-nats.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: nats-client-hub-only
  namespace: shardlands
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: nats-client
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: hub-identity
