deploy/k8s/mesh/14-policy-vault.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: vault-http-clients-only
  namespace: shardlands
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: vault-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: vault-clients
